animation added when modal open

--- a/src/app/components/quick-view/quick-view.component.html
+++ b/src/app/components/quick-view/quick-view.component.html
@@ -1,6 +1,7 @@
 <div class="bg-black h-[100vh] bg-opacity-80 flex justify-center items-center">
   <div
     *ngIf="product"
+    @enterAndLeave
     class="w-[1200px] m-auto bg-white h-[600px] p-6 flex space-x-6"
   >
     <!-- PRODUCT IMAGES -->
