--- a/src/app/home/products/products.component.html
+++ b/src/app/home/products/products.component.html
@@ -22,9 +22,13 @@
     </div>
 
     <div class="flex flex-wrap justify-center lg:justify-start">
+      @if (products) {
+      <div>hello</div>
+      } @else {
       <div *ngFor="let item of products | async | slice : 0 : 8">
         <app-product-container [product]="item"></app-product-container>
       </div>
+      }
     </div>
   </div>
 </div>
