--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,79 +1,163 @@
-<div class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto md:my-6 lg:flex">
-  <div class="hidden lg:flex">
-    <!-- side menu only for tablet and laptop -->
-    <div class="w-[312px]">
-      <!-- category section -->
-      <div class="space-y-2">
-        <h3 class="font-semibold uppercase">Category</h3>
+<div
+  class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto md:my-6 lg:flex lg:justify-between"
+>
+  <!-- side menu only for tablet and laptop -->
+  <div class="min-w-[300px] w-[300px] hidden lg:flex lg:flex-col space-y-4">
+    <!-- category section -->
+    <div class="space-y-2">
+      <h3 class="font-semibold uppercase">Category</h3>
 
-        <div class="space-y-2">
-          <div class="flex space-x-2 items-center focus:text-ciliconorange">
-            <input
-              type="radio"
-              name="category"
-              value="Smartphone"
-              [(ngModel)]="categoryName"
-            />
-            <label class="">Smartphones</label>
-          </div>
-          <div class="flex space-x-2 items-center focus:text-ciliconorange">
-            <input
-              type="radio"
-              name="category"
-              value="Accessories"
-              [(ngModel)]="categoryName"
-            />
-            <label class="">Accessories</label>
-          </div>
-          <div class="flex space-x-2 items-center focus:text-ciliconorange">
-            <input
-              type="radio"
-              name="category"
-              value="Computer & Laptop"
-              [(ngModel)]="categoryName"
-            />
-            <label class="">Computer & Laptop</label>
-          </div>
-          <div class="flex space-x-2 items-center focus:text-ciliconorange">
-            <input
-              type="radio"
-              name="category"
-              value="Headphone"
-              [(ngModel)]="categoryName"
-            />
-            <label class="">Headphones</label>
-          </div>
-          <div class="flex space-x-2 items-center focus:text-ciliconorange">
-            <input
-              type="radio"
-              name="category"
-              value="TV"
-              [(ngModel)]="categoryName"
-            />
-            <label class="">Tv</label>
-          </div>
-          <div class="flex space-x-2 items-center focus:text-ciliconorange">
-            <input
-              type="radio"
-              name="category"
-              value="Camera"
-              [(ngModel)]="categoryName"
-            />
-            <label class="">Camera</label>
-          </div>
+      <div class="space-y-2">
+        <div class="flex space-x-2 items-center focus:text-ciliconorange">
+          <input
+            type="radio"
+            name="category"
+            value="Smartphone"
+            [(ngModel)]="categoryName"
+          />
+          <label class="text-sm text-gray-600">Smartphones</label>
+        </div>
+        <div class="flex space-x-2 items-center focus:text-ciliconorange">
+          <input
+            type="radio"
+            name="category"
+            value="Accessories"
+            [(ngModel)]="categoryName"
+          />
+          <label class="text-sm text-gray-600">Accessories</label>
+        </div>
+        <div class="flex space-x-2 items-center focus:text-ciliconorange">
+          <input
+            type="radio"
+            name="category"
+            value="Computer & Laptop"
+            [(ngModel)]="categoryName"
+          />
+          <label class="text-sm text-gray-600">Computer & Laptop</label>
+        </div>
+        <div class="flex space-x-2 items-center focus:text-ciliconorange">
+          <input
+            type="radio"
+            name="category"
+            value="Headphone"
+            [(ngModel)]="categoryName"
+          />
+          <label class="text-sm text-gray-600">Headphones</label>
+        </div>
+        <div class="flex space-x-2 items-center focus:text-ciliconorange">
+          <input
+            type="radio"
+            name="category"
+            value="TV"
+            [(ngModel)]="categoryName"
+          />
+          <label class="text-sm text-gray-600">Tv</label>
+        </div>
+        <div class="flex space-x-2 items-center focus:text-ciliconorange">
+          <input
+            type="radio"
+            name="category"
+            value="Camera"
+            [(ngModel)]="categoryName"
+          />
+          <label class="text-sm text-gray-600">Camera</label>
         </div>
       </div>
+    </div>
 
-      <!-- price range section -->
-      <div>
-        <input type="range" />
+    <!-- divider line -->
+    <div class="w-[50%] h-[1px] bg-gray-200"></div>
+
+    <!-- price range section -->
+    <div class="space-y-2">
+      <h3 class="font-semibold uppercase">Price range</h3>
+      <div class="w-[60%]">
+        <input
+          type="range"
+          min="0"
+          max="4000"
+          [(ngModel)]="shopRange"
+          class=""
+        />
+        <p class="">{{ shopRange }}</p>
+      </div>
+      <div class="flex items-center space-x-2">
+        <input type="radio" name="price_range" value="All Price" />
+        <label class="text-sm text-gray-600">All Price</label>
+      </div>
+      <div class="flex items-center space-x-2">
+        <input type="radio" name="price_range" value="All Price" />
+        <label class="text-sm text-gray-600">$25 to $100</label>
+      </div>
+      <div class="flex items-center space-x-2">
+        <input type="radio" name="price_range" value="$100 to $300" />
+        <label class="text-sm text-gray-600">$100 to $300</label>
+      </div>
+      <div class="flex items-center space-x-2">
+        <input type="radio" name="price_range" value="$300 to $500" />
+        <label class="text-sm text-gray-600">$300 to $500</label>
+      </div>
+      <div class="flex items-center space-x-2">
+        <input type="radio" name="price_range" value="$300 to $500" />
+        <label class="text-sm text-gray-600">$500 to $1000</label>
+      </div>
+      <div class="flex items-center space-x-2">
+        <input type="radio" name="price_range" value="$300 to $500" />
+        <label class="text-sm text-gray-600">$1000 to $10,000</label>
+      </div>
+    </div>
+    <!-- divider line -->
+
+    <div class="w-[50%] h-[1px] bg-gray-200"></div>
+
+    <!-- popular brands -->
+    <div class="space-y-2">
+      <h3 class="uppercase font-semibold">Popular Brands</h3>
+
+      <div class="flex space-x-4">
+        <div class="space-y-2">
+          <div class="flex items-center space-x-2">
+            <input type="checkbox" name="popular_brand" />
+            <label class="text-sm text-gray-600">Apple</label>
+          </div>
+          <div class="flex items-center space-x-2">
+            <input type="checkbox" name="popular_brand" />
+            <label class="text-sm text-gray-600">Sony</label>
+          </div>
+          <div class="flex items-center space-x-2">
+            <input type="checkbox" name="popular_brand" />
+            <label class="text-sm text-gray-600">Canon</label>
+          </div>
+          <div class="flex items-center space-x-2">
+            <input type="checkbox" name="popular_brand" />
+            <label class="text-sm text-gray-600">Google</label>
+          </div>
+        </div>
+        <div class="space-y-2">
+          <div class="flex items-center space-x-2">
+            <input type="checkbox" name="popular_brand" />
+            <label class="text-sm text-gray-600">Asus</label>
+          </div>
+          <div class="flex items-center space-x-2">
+            <input type="checkbox" name="popular_brand" />
+            <label class="text-sm text-gray-600">Lenovo</label>
+          </div>
+          <div class="flex items-center space-x-2">
+            <input type="checkbox" name="popular_brand" />
+            <label class="text-sm text-gray-600">Dell</label>
+          </div>
+          <div class="flex items-center space-x-2">
+            <input type="checkbox" name="popular_brand" />
+            <label class="text-sm text-gray-600">Samsung</label>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
   <!-- PRODUCTS section  -->
 
-  <div class="space-y-3">
+  <div class="space-y-3 lg:w-[900px]">
     <!-- header -->
     <div class="flex justify-between">
       <h2 class="font-semibold text-xl">Products</h2>
