--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -2,18 +2,25 @@
   class="p-4 md:p-0 md:w-[800px] lg:w-[1200px] m-auto md:my-6 lg:flex lg:justify-between"
 >
   <!-- side menu only for tablet and laptop -->
-  <div class="min-w-[300px] w-[300px] hidden lg:flex lg:flex-col space-y-4">
+  <form
+    [formGroup]="selectiveProducts"
+    class="min-w-[300px] w-[300px] hidden lg:flex lg:flex-col space-y-4"
+  >
     <!-- category section -->
     <div class="space-y-2">
       <h3 class="font-semibold uppercase">Category</h3>
 
       <div class="space-y-2">
-        <div class="flex space-x-2 items-center focus:text-ciliconorange">
+        <div
+          (click)="submit()"
+          class="flex space-x-2 items-center focus:text-ciliconorange"
+        >
           <input
             type="radio"
             name="category"
             value="Smartphone"
-            [(ngModel)]="categoryName"
+            formControlName="category"
+            checked
           />
           <label class="text-sm text-gray-600">Smartphones</label>
         </div>
@@ -22,7 +29,7 @@
             type="radio"
             name="category"
             value="Accessories"
-            [(ngModel)]="categoryName"
+            formControlName="category"
           />
           <label class="text-sm text-gray-600">Accessories</label>
         </div>
@@ -31,7 +38,7 @@
             type="radio"
             name="category"
             value="Computer & Laptop"
-            [(ngModel)]="categoryName"
+            formControlName="category"
           />
           <label class="text-sm text-gray-600">Computer & Laptop</label>
         </div>
@@ -40,7 +47,7 @@
             type="radio"
             name="category"
             value="Headphone"
-            [(ngModel)]="categoryName"
+            formControlName="category"
           />
           <label class="text-sm text-gray-600">Headphones</label>
         </div>
@@ -49,7 +56,7 @@
             type="radio"
             name="category"
             value="TV"
-            [(ngModel)]="categoryName"
+            formControlName="category"
           />
           <label class="text-sm text-gray-600">Tv</label>
         </div>
@@ -58,11 +65,12 @@
             type="radio"
             name="category"
             value="Camera"
-            [(ngModel)]="categoryName"
+            formControlName="category"
           />
           <label class="text-sm text-gray-600">Camera</label>
         </div>
       </div>
+      {{ selectiveProducts.value.category }}
     </div>
 
     <!-- divider line -->
@@ -71,38 +79,65 @@
     <!-- price range section -->
     <div class="space-y-2">
       <h3 class="font-semibold uppercase">Price range</h3>
-      <div class="w-[60%]">
+      <div class="flex space-x-2 items-center">
         <input
           type="range"
           min="0"
-          max="4000"
-          [(ngModel)]="shopRange"
+          max="10000"
+          name="price_range"
           class=""
+          formControlName="maximumRange"
         />
-        <p class="">{{ shopRange }}</p>
+        <p
+          *ngIf="selectiveProducts.value.maximumRange! > 1"
+          class="text-sm text-gray-500"
+        >
+          {{ selectiveProducts.value.maximumRange }}
+        </p>
       </div>
       <div class="flex items-center space-x-2">
-        <input type="radio" name="price_range" value="All Price" />
+        <input type="radio" name="price_range" (click)="setPriceRange(0, 0)" />
         <label class="text-sm text-gray-600">All Price</label>
       </div>
       <div class="flex items-center space-x-2">
-        <input type="radio" name="price_range" value="All Price" />
+        <input
+          type="radio"
+          name="price_range"
+          (click)="setPriceRange(25, 100)"
+        />
         <label class="text-sm text-gray-600">$25 to $100</label>
       </div>
       <div class="flex items-center space-x-2">
-        <input type="radio" name="price_range" value="$100 to $300" />
+        <input
+          type="radio"
+          name="price_range"
+          (click)="setPriceRange(100, 300)"
+        />
         <label class="text-sm text-gray-600">$100 to $300</label>
       </div>
       <div class="flex items-center space-x-2">
-        <input type="radio" name="price_range" value="$300 to $500" />
+        <input
+          type="radio"
+          name="price_range"
+          (click)="setPriceRange(300, 500)"
+          value="$300 to $500"
+        />
         <label class="text-sm text-gray-600">$300 to $500</label>
       </div>
-      <div class="flex items-center space-x-2">
+      <div
+        class="flex items-center space-x-2"
+        (click)="setPriceRange(500, 1000)"
+      >
         <input type="radio" name="price_range" value="$300 to $500" />
         <label class="text-sm text-gray-600">$500 to $1000</label>
       </div>
       <div class="flex items-center space-x-2">
-        <input type="radio" name="price_range" value="$300 to $500" />
+        <input
+          type="radio"
+          name="price_range"
+          (click)="setPriceRange(1000, 10000)"
+          value="$300 to $500"
+        />
         <label class="text-sm text-gray-600">$1000 to $10,000</label>
       </div>
     </div>
@@ -153,7 +188,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </form>
 
   <!-- PRODUCTS section  -->
 
@@ -173,12 +208,21 @@
 
     <!-- products -->
     <div class="flex flex-wrap">
+      @if (products.length > 0) {
       <div *ngFor="let item of products">
         <app-product-container
           [isQuickViewDisabled]="true"
           [product]="item"
         ></app-product-container>
       </div>
+      } @else {
+      <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
+      }
     </div>
   </div>
 </div>
