need to work on fetching data on form data change

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -11,10 +11,7 @@
       <h3 class="font-semibold uppercase">Category</h3>
 
       <div class="space-y-2">
-        <div
-          (click)="submit()"
-          class="flex space-x-2 items-center focus:text-ciliconorange"
-        >
+        <div class="flex space-x-2 items-center focus:text-ciliconorange">
           <input
             type="radio"
             name="category"
