--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -22,15 +22,7 @@
           />
           <label class="text-sm text-gray-600">Smartphones</label>
         </div>
-        <div class="flex space-x-2 items-center focus:text-ciliconorange">
-          <input
-            type="radio"
-            name="category"
-            value="Accessories"
-            formControlName="category"
-          />
-          <label class="text-sm text-gray-600">Accessories</label>
-        </div>
+
         <div class="flex space-x-2 items-center focus:text-ciliconorange">
           <input
             type="radio"
@@ -150,37 +142,37 @@
       <div class="flex space-x-4">
         <div class="space-y-2">
           <div class="flex items-center space-x-2">
-            <input type="checkbox" name="popular_brand" />
+            <input type="checkbox" />
             <label class="text-sm text-gray-600">Apple</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" name="popular_brand" value="Sony" />
+            <input type="checkbox" value="Sony" />
             <label class="text-sm text-gray-600">Sony</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" name="popular_brand" />
+            <input type="checkbox" />
             <label class="text-sm text-gray-600">Canon</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" name="popular_brand" />
+            <input type="checkbox" />
             <label class="text-sm text-gray-600">Google</label>
           </div>
         </div>
         <div class="space-y-2">
           <div class="flex items-center space-x-2">
-            <input type="checkbox" name="popular_brand" />
+            <input type="checkbox" />
             <label class="text-sm text-gray-600">Asus</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" name="popular_brand" />
+            <input type="checkbox" />
             <label class="text-sm text-gray-600">Lenovo</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" name="popular_brand" />
+            <input type="checkbox" />
             <label class="text-sm text-gray-600">Dell</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" name="popular_brand" />
+            <input type="checkbox" />
             <label class="text-sm text-gray-600">Samsung</label>
           </div>
         </div>
