--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -69,22 +69,7 @@
     <!-- price range section -->
     <div class="space-y-2">
       <h3 class="font-semibold uppercase">Price range</h3>
-      <div class="flex space-x-2 items-center">
-        <input
-          type="range"
-          min="0"
-          max="10000"
-          name="price_range"
-          class=""
-          formControlName="maximumRange"
-        />
-        <p
-          *ngIf="selectiveProducts.value.maximumRange! > 1"
-          class="text-sm text-gray-500"
-        >
-          {{ selectiveProducts.value.maximumRange }}
-        </p>
-      </div>
+
       <div class="flex items-center space-x-2">
         <input type="radio" name="price_range" (click)="setPriceRange(0, 0)" />
         <label class="text-sm text-gray-600">All Price</label>
@@ -142,37 +127,37 @@
       <div class="flex space-x-4">
         <div class="space-y-2">
           <div class="flex items-center space-x-2">
-            <input type="checkbox" />
-            <label class="text-sm text-gray-600">Apple</label>
+            <input type="checkbox" (click)="addBrands('Apple')" />
+            <label class="text-sm text-gray-600"> Apple</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" value="Sony" />
+            <input type="checkbox" value="Sony" (click)="addBrands('Sony')" />
             <label class="text-sm text-gray-600">Sony</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" />
+            <input type="checkbox" (click)="addBrands('Canon')" />
             <label class="text-sm text-gray-600">Canon</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" />
+            <input type="checkbox" (click)="addBrands('Google')" />
             <label class="text-sm text-gray-600">Google</label>
           </div>
         </div>
         <div class="space-y-2">
           <div class="flex items-center space-x-2">
-            <input type="checkbox" />
+            <input type="checkbox" (click)="addBrands('Asus')" />
             <label class="text-sm text-gray-600">Asus</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" />
+            <input type="checkbox" (click)="addBrands('Lenovo')" />
             <label class="text-sm text-gray-600">Lenovo</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" />
+            <input type="checkbox" (click)="addBrands('Dell')" />
             <label class="text-sm text-gray-600">Dell</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" />
+            <input type="checkbox" (click)="addBrands('Samsung')" />
             <label class="text-sm text-gray-600">Samsung</label>
           </div>
         </div>
