successfully completed the filter feature - need to work on error handling is product not found

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -135,7 +135,7 @@
             <label class="text-sm text-gray-600">Sony</label>
           </div>
           <div class="flex items-center space-x-2">
-            <input type="checkbox" (click)="addBrands('Canon')" />
+            <input type="checkbox" (click)="addBrands('Cannon')" />
             <label class="text-sm text-gray-600">Canon</label>
           </div>
           <div class="flex items-center space-x-2">
@@ -197,6 +197,7 @@
     </div>
 
     <!-- products -->
+
     <div class="flex flex-wrap">
       @if (products.length > 0) {
       <div *ngFor="let item of products">
