--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html{
+    scroll-behavior: smooth;
+}
 .stop-scrolling {
     height: 100%;
     overflow: hidden;
