used switch map operator to fetch product and the related category

--- a/src/app/components/related-products/related-products.component.html
+++ b/src/app/components/related-products/related-products.component.html
@@ -1,7 +1,7 @@
 <div
   routerLink="/product-detail/{{ product._id }}"
   routerLinkActive="active"
-  class="p-2 h-[100px] w-[full] md:w-[300px] border flex items-center justify-center space-x-4"
+  class="p-2 h-[100px] w-[full] md:w-[300px] border flex items-center justify-center space-x-4 md:m-2"
 >
   <div class="min-w-[80px] min-h-[80px]">
     <img
