--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,12 +1,12 @@
 <div class="lg:w-[1200px] lg:m-auto space-y-10 lg:space-y-20 py-6">
-  <!-- product information -->
+  @if (!loadingTest) {
   <div class="flex justify-center items-center">
     <div
       *ngIf="product"
       class="lg:w-[1200px] w-full bg-white p-4 lg:p-0 lg:flex lg:space-x-20 space-y-8"
     >
       <!-- PRODUCT IMAGES -->
-      <div class="lg:w-1/2">
+      <section id="product images" class="lg:w-1/2">
         <div class="border p-6 flex items-center justify-center">
           <img
             src="{{ mainProductImage || product.images[0] }}"
@@ -28,10 +28,10 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- PRODUCT DESCRIPTIONn -->
-      <div class="lg:w-1/2 space-y-4">
+      <section id="product_description" class="lg:w-1/2 space-y-4">
         <div class="flex justify-between">
           <div class="flex space-x-2 items-center">
             <div class="flex">
@@ -159,13 +159,14 @@
             class="w-[260px]"
           />
         </div>
-      </div>
+      </section>
     </div>
   </div>
 
   <!-- related products -->
+  <!-- @defer (when relatedproducts!.length > 0) {
   <div class="p-4 lg:p-0 space-y-4">
-    <h3 class="font-semibold text-lg">Related Products</h3>
+    <h3 class="font-semibold text-lg">Recommend {{ product.category }}s</h3>
     <div
       class="space-y-4 md:space-y-0 md:flex md:overflow-x-scroll scrollbar-hide lg:flex-wrap lg:justify-between lg:left-0"
     >
@@ -174,4 +175,8 @@
       </div>
     </div>
   </div>
+  } -->
+  } @else {
+  <app-product-detail-loading></app-product-detail-loading>
+  }
 </div>
