--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -213,6 +213,12 @@
       <app-loading-product></app-loading-product>
       <app-loading-product></app-loading-product>
       <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
+      <app-loading-product></app-loading-product>
       }
     </div>
   </div>
