card total complete - need to work on the medium and large device

--- a/src/app/components/mobile-shopping-cart-item/mobile-shopping-cart-item.component.html
+++ b/src/app/components/mobile-shopping-cart-item/mobile-shopping-cart-item.component.html
@@ -1,4 +1,4 @@
-<div class="md:hidden my-4 border-b">
+<div class="md:hidden py-4 border-b">
   <div class="flex w-full text-sm justify-between space-x-2">
     <img
       ngSrc="{{ product.images[0] }}"
