--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -103,6 +103,7 @@
             <button (click)="increaseNumber()">+</button>
           </div>
           <div
+            (click)="addToCart(product)"
             class="w-[60%] bg-ciliconorange flex text-white items-center justify-center p-2 uppercase space-x-3 font-semibold"
           >
             <span>Add to cart</span>
