--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,12 @@
       <img class="w-6 hidden md:flex" src="./../../assets/icons/search.svg" />
     </div>
     <div class="flex space-x-4 relative">
-      <img class="w-6" src="./../../assets/icons/cart.svg" />
+      <img
+        [routerLink]="['/cart']"
+        routerLinkActive="router-link-active"
+        class="w-6"
+        src="./../../assets/icons/cart.svg"
+      />
       <img class="w-6" src="./../../assets/icons/love.svg" />
       <div (click)="userLoginModal()">
         <img class="w-6" src="./../../assets/icons/user.svg" />
