shopping card complete for tablet and desktop version now need to work on the functionality

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,19 +1,22 @@
-<div class="p-4 lg:p-0">
+<div
+  class="p-4 md:space-y-14 lg:space-y-0 lg:flex lg:w-[1200px] lg:m-auto lg:space-x-4"
+>
   <!-- shopping card -->
 
-  <div class="hidden md:flex">
-    <table class="table-auto w-full">
-      <thead class="border">
-        <tr class="bg-gray-50 text-sm w-full">
-          <th class="text-gray-700 font-normal p-2">Products</th>
+  <div class="hidden md:block border">
+    <h2 class="p-4 text-lg font-medium text-gray-900">Shopping Card</h2>
+    <table class="table-auto w-full border">
+      <thead class="border border-gray-100">
+        <tr class="bg-gray-50 text-sm uppercase">
+          <th class="text-gray-700 font-normal w-[50%] p-2">Products</th>
           <th class="text-gray-700 font-normal">Price</th>
           <th class="text-gray-700 font-normal">Quantity</th>
           <th class="text-gray-700 font-normal">Sub-Total</th>
         </tr>
       </thead>
       <tbody class="">
-        <tr class="">
-          <td class="text-center text-sm flex items-center space-x-2">
+        <tr class="hover:bg-gray-50">
+          <td class="text-center text-sm flex items-center space-x-2 p-4">
             <button
               class="hover:border-red-500 text-sm hover:text-red-500 cursor-pointer border-2 px-2 py-0.5 rounded-full text-gray-400 border-gray-400 font-semibold"
             >
@@ -24,30 +27,123 @@
               width="72"
               height="72"
             />
-            <p>4k led ud smart tv with chromecast</p>
+            <p class="">
+              4k led ud smart tv with chromecast sfdsfasd fads fasd fds fdsa
+            </p>
           </td>
           <td class="text-center text-sm">$4000</td>
-          <td class="text-center text-sm">44</td>
+          <td class="text-center text-sm flex justify-center">
+            <div class="border flex items-center h-[40px] p-2 space-x-4">
+              <button class="text-lg text-gray-400">-</button>
+              <p>99</p>
+              <button class="text-lg">+</button>
+            </div>
+          </td>
           <td class="text-center text-sm">$555</td>
         </tr>
-        <tr class="">
-          <td>4k led scsreends fdsa fdasf dsaf dsa fdsaf sadf sa</td>
-          <td>$4000</td>
-          <td>44</td>
-          <td>$555</td>
+        <tr class="hover:bg-gray-50">
+          <td class="text-center text-sm flex items-center space-x-2 p-4">
+            <button
+              class="hover:border-red-500 text-sm hover:text-red-500 cursor-pointer border-2 px-2 py-0.5 rounded-full text-gray-400 border-gray-400 font-semibold"
+            >
+              x
+            </button>
+            <img
+              ngSrc="../../assets/images/macbook.png"
+              width="72"
+              height="72"
+            />
+            <p class="">
+              4k led ud smart tv with chromecast sfdsfasd fads fasd fds fdsa
+            </p>
+          </td>
+          <td class="text-center text-sm">$4000</td>
+          <td class="text-center text-sm flex justify-center">
+            <div class="border flex items-center h-[40px] p-2 space-x-4">
+              <button class="text-lg text-gray-400">-</button>
+              <p>99</p>
+              <button class="text-lg">+</button>
+            </div>
+          </td>
+          <td class="text-center text-sm">$555</td>
+        </tr>
+        <tr class="hover:bg-gray-50">
+          <td class="text-center text-sm flex items-center space-x-2 p-4">
+            <button
+              class="hover:border-red-500 text-sm hover:text-red-500 cursor-pointer border-2 px-2 py-0.5 rounded-full text-gray-400 border-gray-400 font-semibold"
+            >
+              x
+            </button>
+            <img
+              ngSrc="../../assets/images/macbook.png"
+              width="72"
+              height="72"
+            />
+            <p class="">
+              4k led ud smart tv with chromecast sfdsfasd fads fasd fds fdsa
+            </p>
+          </td>
+          <td class="text-center text-sm">$4000</td>
+          <td class="text-center text-sm flex justify-center">
+            <div class="border flex items-center h-[40px] p-2 space-x-4">
+              <button class="text-lg text-gray-400">-</button>
+              <p>99</p>
+              <button class="text-lg">+</button>
+            </div>
+          </td>
+          <td class="text-center text-sm">$555</td>
+        </tr>
+        <tr class="hover:bg-gray-50">
+          <td class="text-center text-sm flex items-center space-x-2 p-4">
+            <button
+              class="hover:border-red-500 text-sm hover:text-red-500 cursor-pointer border-2 px-2 py-0.5 rounded-full text-gray-400 border-gray-400 font-semibold"
+            >
+              x
+            </button>
+            <img
+              ngSrc="../../assets/images/macbook.png"
+              width="72"
+              height="72"
+            />
+            <p class="">
+              4k led ud smart tv with chromecast sfdsfasd fads fasd fds fdsa
+            </p>
+          </td>
+          <td class="text-center text-sm">$4000</td>
+          <td class="text-center text-sm flex justify-center">
+            <div class="border flex items-center h-[40px] p-2 space-x-4">
+              <button class="text-lg text-gray-400">-</button>
+              <p>99</p>
+              <button class="text-lg">+</button>
+            </div>
+          </td>
+          <td class="text-center text-sm">$555</td>
         </tr>
       </tbody>
     </table>
+    <div class="border p-4 flex justify-between">
+      <div
+        class="p-4 text-[#2DA5F3] flex space-x-2 items-center border border-[#2DA5F3] uppercase"
+      >
+        <img ngSrc="../../assets/icons/arrowback.png" width="20" height="20" />
+        <p class="font-semibold">return to shop</p>
+      </div>
+
+      <div class="p-4 text-[#2DA5F3] border border-[#2DA5F3] uppercase">
+        <p class="font-semibold">update cart</p>
+      </div>
+    </div>
   </div>
 
   <!-- mobileshopping card -->
 
   <app-mobile-shopping-cart-item
+    class="md:hidden"
     *ngFor="let item of cartItems"
     [product]="item"
   ></app-mobile-shopping-cart-item>
   <!-- card totals -->
-  <div class="md:w-[300px] border p-4 space-y-4 shadow-sm rounded-lg">
+  <div class="lg:w-[300px] border p-4 space-y-4 shadow-sm rounded-lg">
     <h3 class="font-medium text-lg">Card Totals</h3>
     <div class="space-y-2">
       <div class="flex justify-between items-center">
