--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -3,7 +3,7 @@
 >
   <!-- shopping card -->
 
-  <div class="hidden md:block border">
+  <div class="hidden md:inline-block border">
     <h2 class="p-4 text-lg font-medium text-gray-900">Shopping Card</h2>
     <table class="table-auto w-full border">
       <thead class="border border-gray-100">
@@ -15,109 +15,36 @@
         </tr>
       </thead>
       <tbody class="">
-        <tr class="hover:bg-gray-50">
-          <td class="text-center text-sm flex items-center space-x-2 p-4">
+        <tr *ngFor="let item of cartItems" class="hover:bg-gray-50">
+          <td class="text-center text-sm flex items-center space-x-3 p-4">
             <button
               class="hover:border-red-500 text-sm hover:text-red-500 cursor-pointer border-2 px-2 py-0.5 rounded-full text-gray-400 border-gray-400 font-semibold"
             >
               x
             </button>
-            <img
-              ngSrc="../../assets/images/macbook.png"
-              width="72"
-              height="72"
-            />
+            <img ngSrc="{{ item.images[0] }}" width="72" height="72" />
             <p class="">
-              4k led ud smart tv with chromecast sfdsfasd fads fasd fds fdsa
+              {{ item.name }}
             </p>
           </td>
-          <td class="text-center text-sm">$4000</td>
+          <td class="text-center text-sm">${{ item.price }}</td>
           <td class="text-center text-sm flex justify-center">
             <div class="border flex items-center h-[40px] p-2 space-x-4">
-              <button class="text-lg text-gray-400">-</button>
-              <p>99</p>
-              <button class="text-lg">+</button>
+              <button
+                class="text-lg text-gray-400"
+                (click)="descreaseQuantity(item)"
+              >
+                -
+              </button>
+              <p>{{ item.quantity }}</p>
+              <button class="text-lg" (click)="increaseQuantity(item)">
+                +
+              </button>
             </div>
           </td>
-          <td class="text-center text-sm">$555</td>
-        </tr>
-        <tr class="hover:bg-gray-50">
-          <td class="text-center text-sm flex items-center space-x-2 p-4">
-            <button
-              class="hover:border-red-500 text-sm hover:text-red-500 cursor-pointer border-2 px-2 py-0.5 rounded-full text-gray-400 border-gray-400 font-semibold"
-            >
-              x
-            </button>
-            <img
-              ngSrc="../../assets/images/macbook.png"
-              width="72"
-              height="72"
-            />
-            <p class="">
-              4k led ud smart tv with chromecast sfdsfasd fads fasd fds fdsa
-            </p>
+          <td class="text-center text-sm">
+            ${{ item.price * item.quantity! }}
           </td>
-          <td class="text-center text-sm">$4000</td>
-          <td class="text-center text-sm flex justify-center">
-            <div class="border flex items-center h-[40px] p-2 space-x-4">
-              <button class="text-lg text-gray-400">-</button>
-              <p>99</p>
-              <button class="text-lg">+</button>
-            </div>
-          </td>
-          <td class="text-center text-sm">$555</td>
-        </tr>
-        <tr class="hover:bg-gray-50">
-          <td class="text-center text-sm flex items-center space-x-2 p-4">
-            <button
-              class="hover:border-red-500 text-sm hover:text-red-500 cursor-pointer border-2 px-2 py-0.5 rounded-full text-gray-400 border-gray-400 font-semibold"
-            >
-              x
-            </button>
-            <img
-              ngSrc="../../assets/images/macbook.png"
-              width="72"
-              height="72"
-            />
-            <p class="">
-              4k led ud smart tv with chromecast sfdsfasd fads fasd fds fdsa
-            </p>
-          </td>
-          <td class="text-center text-sm">$4000</td>
-          <td class="text-center text-sm flex justify-center">
-            <div class="border flex items-center h-[40px] p-2 space-x-4">
-              <button class="text-lg text-gray-400">-</button>
-              <p>99</p>
-              <button class="text-lg">+</button>
-            </div>
-          </td>
-          <td class="text-center text-sm">$555</td>
-        </tr>
-        <tr class="hover:bg-gray-50">
-          <td class="text-center text-sm flex items-center space-x-2 p-4">
-            <button
-              class="hover:border-red-500 text-sm hover:text-red-500 cursor-pointer border-2 px-2 py-0.5 rounded-full text-gray-400 border-gray-400 font-semibold"
-            >
-              x
-            </button>
-            <img
-              ngSrc="../../assets/images/macbook.png"
-              width="72"
-              height="72"
-            />
-            <p class="">
-              4k led ud smart tv with chromecast sfdsfasd fads fasd fds fdsa
-            </p>
-          </td>
-          <td class="text-center text-sm">$4000</td>
-          <td class="text-center text-sm flex justify-center">
-            <div class="border flex items-center h-[40px] p-2 space-x-4">
-              <button class="text-lg text-gray-400">-</button>
-              <p>99</p>
-              <button class="text-lg">+</button>
-            </div>
-          </td>
-          <td class="text-center text-sm">$555</td>
         </tr>
       </tbody>
     </table>
@@ -139,7 +66,7 @@
 
   <app-mobile-shopping-cart-item
     class="md:hidden"
-    *ngFor="let item of cartItems$ | async"
+    *ngFor="let item of cartItems"
     [product]="item"
   ></app-mobile-shopping-cart-item>
   <!-- card totals -->
