cart total amount working now

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -76,7 +76,7 @@
       <div class="space-y-2">
         <div class="flex justify-between items-center">
           <p class="text-gray-600 text-sm">Sub-Total</p>
-          <span class="text-sm text-gray-900">$320</span>
+          <span class="text-sm text-gray-900">${{ cartTotalAmount }}</span>
         </div>
         <div class="flex justify-between items-center">
           <p class="text-gray-600 text-sm">Shipping</p>
